--- a/templates/home.html
+++ b/templates/home.html
@@ -21,8 +21,25 @@
 
         <p><input type = "submit" value = "Clicca per conoscere i dati" /></p>
     </form> <br> <br>
-    <h2>esercizio 3 "clicca qui"</h2>
+    <h2>3. il numero di clienti per ogni stato.</h2>
     <form action="/esercizio3" method = "GET">
+     
+
+        <p><input type = "submit" value = "Clicca per conoscere i dati" /></p>
+    </form>
+    
+    <h2>4. lo stato con il maggior numero di clienti
+    </h2>
+
+    <form action="/esercizio4" method = "GET">
+     
+
+        <p><input type = "submit" value = "Clicca per conoscere i dati" /></p>
+    </form>
+    
+    <h2>3. il numero di clienti per ogni stato.</h2>
+
+    <form action="/esercizio5" method = "GET">
      
 
         <p><input type = "submit" value = "Clicca per conoscere i dati" /></p>
