--- a/templates/grafici.html
+++ b/templates/grafici.html
@@ -8,5 +8,7 @@
     </head>
     <body>
         <img src = "static/images/graf.png">
+        <img src = "static/images/graf2.png">
+        <img src = "static/images/graf3.png">
     </body>
 </html>
